// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Author custom-test"
>
  <span
    aria-label="Keegan avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar "
      decoding="async"
      height={48}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={48}
    />
    <span
      className="name"
    >
      Keegan
    </span>
  </span>
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Author "
>
  <span
    aria-label="Keegan avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar "
      decoding="async"
      height={48}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={48}
    />
    <span
      className="name"
    >
      Keegan
    </span>
  </span>
</div>
`;

exports[`Test no name 1`] = `
<div
  className="Pinpoint Author "
>
  <span
    aria-label=" avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar "
      decoding="async"
      height={48}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={48}
    />
    <span
      className="name"
    >
      
    </span>
  </span>
</div>
`;
